# py2pyd

./: .gitignore  README.md  setup.cfg  setup.py
py2pyd/: convert.py
test/: temp.py
