[metadata]
name = py2pyd
version = 0.1.0
author = Abhishek Kumar
author_email = abhishekkumar39054@gmail.com
maintainer = Abhishek Kumar
description = Convert Python files to compiled binary extensions (.pyd/.so) using Cython,
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abhi39054/py2pyd.git
license = MIT
# List of standard classifiers: https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# Automatically find the 'pyessential' package and all its sub-packages 
# (decorators, functions, etc.)
packages = find:
install_requires =
    # Add external dependencies here, e.g., pandas
    # pandas>=1.3.0
python_requires = >=3.8

[options.packages.find]
# Exclude the test folder from being packaged
exclude =
    tests*